Update about me

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                     <h3 class="text-2xl font-semibold mb-6">Who am I?</h3>
                     <p class="text-gray-600 mb-6">
                         I'm Víctor Nathanael Badillo Aldama, a Software Engineer with a passion for building innovative solutions. 
+                        I studied Computer Science at the University of A Coruña, in the bilingual program, where I developed a strong foundation in software development and problem-solving.
                         My expertise lies in backend development, artificial intelligence, and blockchain technologies. 
                         I thrive in dynamic environments where I can apply my technical skills to solve complex problems.
                     </p>
@@ -352,6 +353,8 @@
                         <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">Matplotlib</span>
                         <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">GraphQL</span>
                         <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">Docker</span>
+                        <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">JIRA</span>
+                        <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">Confluence</span>
                         <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">Machine Learning</span>
                         <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">CUDA</span>
                         <span class="skill-pill bg-blue-100 text-blue-800 px-4 py-2 rounded-full text-sm font-medium">NLP</span>
