--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
                             <span class="text-xs bg-gray-100 px-2 py-1 rounded">Python</span>
                             <span class="text-xs bg-gray-100 px-2 py-1 rounded">Machine learning</span>
                             <span class="text-xs bg-gray-100 px-2 py-1 rounded">Deep learning</span>
+                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">Scikit-learn</span>
                         </div>
                         <div class="flex space-x-3 mt-4">
                             <a href="https://github.com/victor-badillo/music-genre-classificator" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 text-sm font-medium w-full text-center">View Code</a>
@@ -512,7 +513,11 @@
                         <p class="text-gray-600 mb-4">Segmentation and classification of the breast area in lateral mammograms applying multiple artificial vision techniques.</p>
                         <div class="flex flex-wrap gap-2 mb-4 mt-auto">
                             <span class="text-xs bg-gray-100 px-2 py-1 rounded">Python</span>
-                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">Computer vision</span>
+                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">Pandas</span>
+                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">OpenCV</span>
+                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">Scikit-learn</span>
+                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">Matplotlib</span>
+                            <span class="text-xs bg-gray-100 px-2 py-1 rounded">NumPy</span>
                         </div>
                         <div class="flex space-x-3 mt-4">
                             <a href="https://github.com/victor-badillo/Segmentation_mammography" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 text-sm font-medium w-full text-center">View Code</a>
